syntax="proto3";
package artery.delegating.v1beta1;

option go_package = "github.com/arterynetwork/artr/x/delegating/types";

message EventDelegate {
  string account = 1;
  uint64 ucoins = 2;
  repeated string commission_to = 3;
  repeated uint64 commission_amount = 4;
}

message EventFreeze {
  string account = 1;
  uint64 ucoins = 2;
}

message EventUndelegate {
  string account = 1;
  uint64 ucoins = 2;
}

message EventAccrue {
  string account = 1;
  uint64 ucoins = 2;
  uint64 fee = 3;
}

message EventValidatorAccrue {
  string account = 3;
  repeated string accounts = 1;
  repeated uint64 ucoins = 2;
}

message EventMassiveRevoke {
  string account = 1;
  uint64 ucoins = 2;
}
